[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "python-repo"
author = "Kemal Kurniawan"
author-email = "kemal@kkurniawan.com"
home-page = "https://github.com/kmkurn/python-repo"
requires = [""]
requires-python = ">=3.6,<4"
description-file = "README.rst"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]

[tool.flit.metadata.requires-extra]
test = ["pytest ~=4.3.0", "pytest-cov"]
doc = ["Sphinx ~=1.8.5", "sphinx_rtd_theme", "sphinx-autodoc-typehints ~=1.6.0"]
dev = ["flake8", "mypy ~=0.770", "black ~=19.10b0"]

[tool.flit.metadata.urls]
Documentation = ""

[tool.black]
line-length = 96
